<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, OpenNMSActivity!</string>
    <string name="app_name">OpenNMS</string>
    <string name="Alerts">alerts.header</string>
    <string name="alerts_header">Alerts</string>
    <string name="outages_header">Outages</string>
    <string name="unkMenuOptionAlertTitle">Unknown Menu Option</string>
    <string name="unkMenuOptionMsg">The menu option REPLACE was not understood.</string>
    <string name="ok">OK</string>
    <string name="prefsOnmsHost">OpenNMS Host:</string>
    <string name="prefsOnmsHostDialogMessage">Enter the host name or IP address of your OpenNMS web server</string>
    <string name="prefsUserSslTitle">Use SSL?</string>
    <string name="prefsUseSslSummary">Check this box if the application should communicate with the OpenNMS server via SSL/HTTPS</string>
    <string name="prefsPortTitle">Server Port:</string>
    <string name="prefsPortSummary">Enter the port number which should be used to connect to the OpenNMS web server or leave blank to use the default</string>
    <string name="prefsUsernameTitle">Username:</string>
    <string name="prefsUsernameSummary">Enter the user ID with which you log on to OpenNMS</string>
    <string name="prefsPasswordTitle">Password:</string>
    <string name="prefsPasswordSummary">Enter your password for the OpenNMS web interface</string>
    <string name="prefsOnmsAppPathTitle">OpenNMS Application Path:</string>
    <string name="prefsOnmsAppPathSummary">The path to the OpenNMS application on the web server (Typically \'/opennms\')</string>
    <string name="prefsOnmsDefaultPath">/opennms</string>
    <string name="prefsScreenTitle">OpenNMS Preferences</string>
    <string name="prefsInvalidPortTitle">Invalid Server Port</string>
    <string name="prefsInvalidPortMessage">The value &quot;REPLACE&quot; is not a number between 1 and 65535, and it must be!</string>
    <string name="navPrev">&lt;- Prev</string>
    <string name="navNext">Next -&gt;</string>
    <string name="prefsPollCategoryLabel">Background Polling</string>
    <string name="onms_db_create_error_title">Error creating database for: </string>
    <string name="onms_db_create_error_message">An error was encountered while trying to create the database table. The message was: </string>
    <string name="restServiceDescription">A Service which runs in the background to perform ReST requests/SQL lookups to front-end Activity classes</string>
</resources>
